--- a/src/app/create-registration/create-registration.component.html
+++ b/src/app/create-registration/create-registration.component.html
@@ -5,7 +5,7 @@
 
 <!-- Registration form page -->
 <div class="registration-form m-3 p-4">
-    <form [formGroup]="registerForm" (ngSubmit)="submit()">
+    <form [formGroup]="registerForm">
         <div class="row">
             <div class="col-md-6">
                 <mat-form-field appearance="outline">
